--- a/src/components/checkbox-item/checkbox-item.pug
+++ b/src/components/checkbox-item/checkbox-item.pug
@@ -1,8 +1,19 @@
-mixin checkbox(options)
-  if (typeof(options) !== null)
+//- {
+//-   options: {
+//-     checkboxTitle: string,
+//-     checkboxSubtitle: string,
+//-     checkboxId: string,
+//-     checkboxValue: string,
+//-     checkboxName: string,
+//-     checked: boolean
+//-   }
+//- }
+
+mixin checkbox-item(options)
+  if (typeof(options) !== null && typeof(val) !== null)
     li.checkbox-item
       if (val.checkboxSubtitle)
-        label(class=['checkbox-item__label', 'checkbox-item__label--rich'] for= val.checkboxId) 
+        label(class=['checkbox-item__label'] for= val.checkboxId) 
           input(type='checkbox' class= ['checkbox-item__input'] value= val.checkboxValue id= val.checkboxId name= val.checkboxName checked=val.checked)
           span(class=['checkbox-item__title', 'checkbox-item__title--rich']) #{val.checkboxTitle}
           span(class='checkbox-item__subtitle') #{val.checkboxSubtitle}
