--- a/src/pages/ui-kit/form-elements.scss
+++ b/src/pages/ui-kit/form-elements.scss
@@ -2,6 +2,8 @@
 @import '../../components/input-block/input-block.scss';
 @import '../../components/dropdown/dropdown.scss';
 @import '../../components/selector/selector.scss';
+@import '../../components/bullet-item/bullet-item.scss';
+@import '../../components/bullet-list/bullet-list.scss';
 @import '../../components/checkbox-item/checkbox-item.scss';
 @import '../../components/checkbox-list/checkbox-list.scss';
 @import '../../components/icons/icons.scss';
