--- a/src/pages/ui-kit/form-elements.scss
+++ b/src/pages/ui-kit/form-elements.scss
@@ -6,6 +6,8 @@
 @import '../../components/bullet-list/bullet-list.scss';
 @import '../../components/checkbox-item/checkbox-item.scss';
 @import '../../components/checkbox-list/checkbox-list.scss';
+@import '../../components/radio-list/radio-list.scss';
+@import '../../components/radio-btn/radio-btn.scss';
 @import '../../components/icons/icons.scss';
 .wrapper-1 {
   display: grid;
