--- a/src/pages/ui-kit/form-elements.scss
+++ b/src/pages/ui-kit/form-elements.scss
@@ -8,6 +8,7 @@
 @import '../../components/checkbox-list/checkbox-list.scss';
 @import '../../components/radio-list/radio-list.scss';
 @import '../../components/radio-btn/radio-btn.scss';
+@import '../../components/toggle/toggle.scss';
 @import '../../components/icons/icons.scss';
 .wrapper-1 {
   display: grid;
