added toggle-list and made changes to toggle-buttons

--- a/src/components/radio-btn/radio-btn.pug
+++ b/src/components/radio-btn/radio-btn.pug
@@ -1,3 +1,12 @@
+//- {
+//-   options: {
+//-     radioId: string,
+//-     radioValue: string,
+//-     radioName: string,
+//-     radioTitle: string,
+//-     checked: boolean
+//- }
+
 mixin radio-btn(options)
   if (typeof(options) !== null && typeof(val) !== null)
     li.radio-btn
