--- a/src/components/toggle-list/toggle-list.scss
+++ b/src/components/toggle-list/toggle-list.scss
@@ -1,9 +1,10 @@
-.radio-list {
+.toggle-list {
   margin: 0;
   padding: 0;
   list-style: none;
   &__title {
+    margin-bottom: 16px;
     @include title-h3;
-    margin-bottom: 6px;
+    letter-spacing: -0.45px;
   }
 }
